crates/lash/tests/ui/children_start_turn_is_not_public.stderr
error[E0599]: no method named `start_turn` found for struct `ChildrenControl` in the current scope
 --> tests/ui/children_start_turn_is_not_public.rs:2:42
  |
2 |     let _ = session.control().children().start_turn(request).await;
  |                                          ^^^^^^^^^^ method not found in `ChildrenControl`
